--- a/webapp/source/styles/custom.css
+++ b/webapp/source/styles/custom.css
@@ -1,19 +1,31 @@
 body {
+  marigin: 0;
+  padding: 0;
+
   background: url('../images/bg.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
+
   background-size: cover;
+
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 
   color: white;
 }
 
-/*boostrap override */
+/* boostrap override */
+.col {
+  padding: 0;
+}
+
 .container {
-  padding: 5em 5em 5em 5em;
 }
 
 .jumbotron {
+  padding: 2em;
   background: rgba(0, 0, 0, 0.5);
 }
 
@@ -21,35 +33,34 @@ body {
   color: lightgreen;
 }
 
+/* custom */
 .btn-default {
   background: lightgreen;
 }
 
 .btn-default:hover {
-  background: darkgreen;
-  color: white;
-  border: solid 1px darkgreen;
+  background: white;
+  color: #000000;
+  border: solid 0.1em white;
 }
 
 .events-container {
-  padding: 1em 0em 5em 0em;
-  text-align: center;
+  padding-bottom: 2em;
   border-radius: 1.5em;
   background: rgba(0, 0, 0, 0.7);
 }
 
-.events-container .event-title {
-  font-size: 150%;
+
+.events-header, .event-header, .event-body , .guest-body{
+  padding: 1em;
 }
 
-.events-container .event-nav {
-  padding: 1em 3em 1em 3em;
-  text-align: left;
+.guest-body {
+  margin-bottom: 1em;
 }
 
 .events-container .event-container {
-
-  padding: 1em 3em 1em 3em;
+  padding: 1em;
   background: rgba(0, 0, 0, 0);;
 }
 
@@ -69,19 +80,14 @@ body {
 .events-container .event-container .guest-body {
   background: white;
   color: darkgreen;
-  padding: 2.5em 1em 2.5em 1em;
-  margin: 2em 0em 2em 0em;
 }
 
 label {
-  width: 100%;
-  text-align: left;
-  font-size: 90%;
-  font-weight: bold;
+  display: block;
 }
 
 input {
-  margin: 0em 0em 2em 0em;
+  margin: 0em 0em 2em 0em ;
 }
 
 .leftalign {
@@ -90,4 +96,77 @@ input {
 
 .rightalign {
   text-align: right;
+}
+
+@media(max-width: 768px) {
+  body {
+  }
+
+  .container {
+  }
+
+  .jumbotron {
+  }
+
+  .events-container {
+  }
+
+  .events-container .event-nav {
+  }
+
+  .events-container .event-container {
+  }
+
+
+  .events-container .event-container .guest-body {
+  }
+}
+
+
+@media(min-width: 768px) and (max-width: 992px) {
+  body {
+  }
+
+  .container {
+  }
+
+  .jumbotron {
+  }
+
+  .events-container {
+  }
+
+  .events-container .event-nav {
+  }
+
+  .events-container .event-container {
+  }
+
+
+  .events-container .event-container .guest-body {
+  }
+}
+
+@media(min-width: 992px) {
+  body {
+  }
+
+  .container {
+  }
+
+  .jumbotron {
+  }
+
+  .events-container {
+  }
+
+  .events-container .event-nav {
+  }
+
+  .events-container .event-container {
+  }
+
+
+  .events-container .event-container .guest-body {
+  }
 }
