--- a/webapp/source/scripts/partials/event-edit.html
+++ b/webapp/source/scripts/partials/event-edit.html
@@ -9,7 +9,7 @@
         <form>
             <div class="form-group">
                 <label class="control-label">Name:</label>
-                <input class="form-control" type="text" placeholder="Name" ng-model="event.name"  required />
+                <input class="form-control" value="event.name" type="text" placeholder="Name" ng-model="event.name"  required />
             </div>
             <div class="form-group">
                 <label class="control-label">Description:</label>
