--- a/webapp/source/scripts/partials/event-add.html
+++ b/webapp/source/scripts/partials/event-add.html
@@ -33,7 +33,7 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Max. amount of guests:</label>
-                <input class="form-control" type="text" placeholder="Maximal amount of guests" ng-model="event.maximalAmountOfGuests" required  />
+                <input class="form-control" type="text" placeholder="Maximal amount of guests" ng-model="event.maxAmountOfGuests" required  />
             </div>
             <div class="form-group">
                 <label class="control-label">Location name:</label>
