--- a/webapp/source/scripts/partials/event-edit.html
+++ b/webapp/source/scripts/partials/event-edit.html
@@ -33,7 +33,7 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Max. amount of guests:</label>
-                <input class="form-control" type="text" placeholder="Maximal amount of guests" ng-model="event.maximalAmountOfGuests" required  />
+                <input class="form-control" type="text" placeholder="Maximal amount of guests" ng-model="event.maxAmountOfGuests" required  />
             </div>
             <div class="form-group">
                 <label class="control-label">Location name:</label>
@@ -51,7 +51,7 @@
                 <label class="control-label">Location plz:</label>
                 <input class="form-control" type="text" placeholder="Location plz" ng-model="event.location.plz" required  />
             </div>
-            <div class="form-group rightalign"><input class="btn btn-default" type="submit" ng-click="create(event)" value="Save"  required /></div>
+            <div class="form-group rightalign"><input class="btn btn-default" type="submit" ng-click="edit(event)" value="Save"  required /></div>
         </form>
     </div>
 </div>
